// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It could add async custom methods through addMethods 1`] = `
<div>
  <input />
  <div>
    It should be empty after async check
  </div>
</div>
`;

exports[`It could add custom methods through addMethods 1`] = `
<div>
  <input />
  <div>
    It should be empty
  </div>
</div>
`;

exports[`It could add template message to custom message 1`] = `
<div>
  <input />
  <div>
    It has value: Hi
  </div>
</div>
`;

exports[`It could use message method to custom message 1`] = `
<div>
  <input />
  <div>
    It has value: Hi
  </div>
</div>
`;

exports[`It sould be not valid if input has empty 1`] = `
<div>
  <input />
  <div>
    It should have value
  </div>
</div>
`;

exports[`It sould be valid if input has value 1`] = `
<div>
  <input />
  <div />
</div>
`;
